--- a/alembic.ini
+++ b/alembic.ini
@@ -52,7 +52,8 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql+asyncpg://user:password@localhost:5432/db
+# sqlalchemy.url = postgresql+asyncpg://user:password@localhost:5432/db
+sqlalchemy.url = driver://user:pass@localhost/dbname
 
 
 [post_write_hooks]
