--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,17 @@ authors = ["Alexey Lapitski <alexey.lapitski@intexsoft.by>"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+SQLAlchemy = "^1.4.31"
+prompt-toolkit = "^3.0.27"
+python-dotenv = "^0.19.2"
+pydantic = "^1.9.0"
+asyncpg = "^0.25.0"
+aiohttp = "^3.8.1"
+beautifulsoup4 = "^4.10.0"
+aiofiles = "^0.8.0"
+alembic = "^1.7.6"
+fastapi = "^0.73.0"
+uvicorn = {extras = ["standard"], version = "^0.17.4"}
 
 [tool.poetry.dev-dependencies]
 
