added dependency injection, typehints, tags; some structure rework

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-HEAD_URL=
-PATH_TO_SAVE_DATA=
+HEAD_URL=https://meteo.by/minsk/retro/
+PATH_TO_SAVE_DATA=~/async_parser/data
 
-DATABASE_URI=
+DATABASE_URL=postgresql+asyncpg://username:password@localhost:5432/database
