--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ aiofiles = "^0.8.0"
 alembic = "^1.7.6"
 fastapi = "^0.73.0"
 uvicorn = {extras = ["standard"], version = "^0.17.4"}
+dependency-injector = "^4.38.0"
 
 [tool.poetry.dev-dependencies]
 
