--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
 HEAD_URL=https://meteo.by/minsk/retro/
 PATH_TO_SAVE_DATA=~/async_parser/data
 
-DATABASE_URL=postgresql+asyncpg://username:password@localhost:5432/database
+DATABASE_URL=postgresql+asyncpg://username:password@localhost:5432/db
+
+POSTGRES_USER=username
+POSTGRES_PASSWORD=password
+POSTGRES_DB=db
