--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,24 @@
-version: "3.9"
+version: '3.9'
 services:
-  postgres:
-    image: postgres:latest
-    environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: db
-      container_name: db_postgres
+  server:
+    build:
+      context: .
+      dockerfile: docker/Dockerfile
+    container_name: server
+    env_file:
+      - .env
     ports:
-      - "5432:5432"
+      - '8000:8000'
+    depends_on:
+      - db
+  db:
+    image: postgres
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    env_file:
+      - .env
+    ports:
+      - '5432:5432'
+volumes:
+    postgres_data:
+
