--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,27 @@
 version: '3.9'
 services:
-  server:
+  app:
     build:
       context: .
-      dockerfile: docker/Dockerfile
-    container_name: server
-    env_file:
-      - .env
+      dockerfile: system/Dockerfile
+    container_name: backend
+    entrypoint: ./entrypoint.sh
+    restart: always
     ports:
       - '8000:8000'
+    env_file:
+      - .env
     depends_on:
       - db
   db:
     image: postgres
-    volumes:
-      - postgres_data:/var/lib/postgresql/data/
-    env_file:
-      - .env
+    container_name: postgres
     ports:
       - '5432:5432'
-volumes:
-    postgres_data:
-
+    environment:
+      POSTGRES_DB: '${POSTGRES_DB}'
+      POSTGRES_USER: '${POSTGRES_USER}'
+      POSTGRES_PASSWORD: '${POSTGRES_PASSWORD}'
+    volumes:
+      - ./shared-files/database/dump:/app/dump
+      - ./shared-files/database/postgresql:/var/lib/postgresql/data
