--- a/system/pyproject.toml
+++ b/system/pyproject.toml
@@ -18,6 +18,7 @@ alembic = "^1.7.6"
 fastapi = "^0.73.0"
 uvicorn = {extras = ["standard"], version = "^0.17.4"}
 dependency-injector = "^4.38.0"
+celery = "^5.2.3"
 
 [tool.poetry.dev-dependencies]
 
