--- a/system/pyproject.toml
+++ b/system/pyproject.toml
@@ -19,6 +19,7 @@ fastapi = "^0.73.0"
 uvicorn = {extras = ["standard"], version = "^0.17.4"}
 dependency-injector = "^4.38.0"
 celery = "^5.2.3"
+asgiref = "^3.5.0"
 
 [tool.poetry.dev-dependencies]
 
